# Hellscape

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.old  README.md  notes
Models/: HELLSCAPEXPORTTESTSNAKEY.FBX  Hellscape jumpy boy.dae  snaketry.mtl
assets/Models/: HELLSCAPEXPORTTESTSNAKE.FBX  HELLSCAPEXPORTTESTSNAKEY.FBX  HELSCAPEExporttest.FBX  door down angled.fbx  playground.blend
assets/Models/Island/: object_hitbox.dae
assets/Models/Map_color/: object.mtl
assets/Models/Player/: transform.txt
assets/Models/Playground/: hills_shape.mtl
assets/Models/World/: world.mtl
assets/gl/: constant_color_object.fs  debug.fs  debug.vs  debug_quad.fs  dirshadow.fs  lamp.fs  lamp.vs  object.fs  object.gs  object.vs  object_debug.fs  object_debug.vs  pointshadow.fs  shadow.vs  text.fs  text.vs
docs/: todo.md
include/: KeyStates.h  asset_manager.hpp  camera.hpp  constants.hpp  controller.hpp  debug_drawer.hpp  dynamics.hpp  game_object.hpp  gameplay.hpp  inputs.hpp  light.hpp  mesh.hpp  model.hpp  player.hpp  settings.hpp  shader.hpp  text.hpp  web.hpp
include/glad/: glad.h
libs/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
libs/glfw/src/: Makefile  cmake_install.cmake
libs/glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  vulkan  windows
src/: asset_manager.cpp  camera.cpp  debug_drawer.cpp  dynamics.cpp  game_object.cpp  gameplay.cpp  glad.c  inputs.cpp  light.cpp  main.cpp  mesh.cpp  model.cpp  player.cpp  settings.cpp  shader.cpp  text.cpp  udp_client.c  udp_client.c.  udp_serv.cpp  web.cpp
src/gl/: object.fs  object.vs
